unpackaged/main/default/objects/Order_Product_Historical__c/Order_Product_Historical__c.object-meta.xml
<CustomObject>
    <description>This is a custom object to store the historical SO data from NS.</description>
    <label>Order Product Historical</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Order Product Historical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Products Historical</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>