unpackaged/main/default/objects/Order_Product_Historical__c/fields/Line_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Sequence_Number__c</fullName>
    <description>Migrated from Netsuite</description>
    <label>Line Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>