unpackaged/main/default/objects/Order_Product_Historical__c/fields/NetSuite_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_Id__c</fullName>
    <description>Equivalent netsuite_conn__NetSuite_Item_Id__c in Order Products</description>
    <label>NetSuite Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>