unpackaged/main/default/objects/Order_Product_Historical__c/fields/NetSuite_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Order_ID__c</fullName>
    <description>Use to map to Orders, migrated from NetSuite</description>
    <label>NetSuite Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>