unpackaged/main/default/objects/Order_Product_Historical__c/fields/NetSuite_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Order_Line_Id__c</fullName>
    <description>Equivalent to netsuite_conn__NetSuite_Order_Line_Id__c in Order Products</description>
    <label>NetSuite Order Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>