unpackaged/main/default/objects/Order_Product_Historical__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Link to Orders, equivalent to NS Sales Order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Products Historical</relationshipLabel>
    <relationshipName>Order_Products_Historical</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>