unpackaged/main/default/objects/Order_Product_Historical__c/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <description>Equivalent to Product (SF Standard field) in Order Products</description>
    <label>Product/Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>