unpackaged/main/default/objects/Order_Product_Historical__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Equivalent to Quantity (SF Standard field) in Order Products</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>