unpackaged/main/default/objects/Order_Product_Historical__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Equivalent to Total Price (SF Standard field) in Order Products</description>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>