unpackaged/main/default/objects/Order_Product_Historical__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Migrated from Netsuite Type (Line Type)</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>