unpackaged/main/default/objects/Order_Product_Historical__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Equivalent as UnitPrice (SF standard field) in Order Products</description>
    <label>Unit_Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>